deploy/k8s/publicapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eshop-publicapi-service
  namespace: eshoponweb
  labels:
    app: eshop-publicapi
spec:
  type: ClusterIP
  selector:
    app: eshop-publicapi
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  - name: https
    port: 443
    targetPort: 8443
    protocol: TCP
