deploy/k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eshop-web-service
  namespace: eshoponweb
  labels:
    app: eshop-web
spec:
  type: LoadBalancer
  selector:
    app: eshop-web
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  - name: https
    port: 443
    targetPort: 8443
    protocol: TCP
